--- a/equipment.css
+++ b/equipment.css
@@ -1,10 +1,18 @@
+body{
+    margin: 0;
+}
 .BEAKER:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
     background-color: black;
     color: white;
+    border: 1px solid black;
 }
 .TABLE-OF-CONTENTS{
     margin-left: 5px;
     display: flex;
     flex-direction: column;
+    width: max-content;
+    border:2px solid black;
+    height: 100vh;
+    
 }
