--- a/equipment.css
+++ b/equipment.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
 body{
     margin: 0;
 }
+*,
+::before,
+::after {
+    box-sizing: border-box;
+}
+
+.main {}
 .BEAKER:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
     background-color: black;
@@ -14,5 +23,23 @@ body{
     width: max-content;
     border:2px solid black;
     height: 100vh;
-    
+}
+#topbar {
+    background: linear-gradient(to right, rgb(108, 169, 255), rgb(72, 72, 255));
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    height: 100px;
+    color: rgb(0, 0, 0);
+    font-family: 'Caveat';
+    font-size: 40px;
+}
+.topbar-btn>button {
+    color: white;
+    border: none;
+    background-color: inherit;
+}
+
+.logox {
+    color: rgb(255, 106, 72);
 }
