--- a/index.css
+++ b/index.css
@@ -51,7 +51,6 @@ body {
     display: grid;
     grid-template-columns: repeat(18, 60px);
     grid-template-rows: repeat(7, 60px);
-    background-color: aliceblue;
     gap: 4px;
 }
 .element {
@@ -86,3 +85,6 @@ body {
 .element:hover {
     scale: 180%;
 }
+
+.element2 {grid-column: 18 / 19;}
+.element5, .element13 {grid-column: 13 /14;}
