--- a/index.css
+++ b/index.css
@@ -10,12 +10,13 @@ body {
 }
 
 .main {
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Topbar CSS starts */
 #topbar {
-    /* background: linear-gradient(to right, rgb(108, 169, 255), rgb(72, 72, 255)); */
     background-color: #000000;
     padding: 30px;
     display: flex;
@@ -30,10 +31,12 @@ body {
 .topbar-btn > button {
     color: rgb(0, 0, 0);
     border: none;
+    border-radius: 10px;
     background-color: rgb(255, 255, 255);
     height: 50px;
     padding: 0 10px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', Verdana, sans-serif;
+    font-family: 'Roboto';
+    font-size: 15px;
     cursor: pointer;
 }
 .logox {
@@ -42,7 +45,7 @@ body {
 /* Topbar CSS ends */
 
 .periodic-table-container {
-    height: 80vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,8 +53,8 @@ body {
 .periodic-table {
     display: grid;
     grid-template-columns: repeat(18, 60px);
-    grid-template-rows: repeat(7, 60px);
-    gap: 4px;
+    grid-template-rows: repeat(10, 60px);
+    gap: 3px;
 }
 .element {
     width: 100%;
@@ -65,6 +68,7 @@ body {
     cursor:cell;
     transition: 0.05s;
     border: 1px solid black;
+    border-radius: 0px;
 }
 .element-atomic-details {
     display: flex;
@@ -88,3 +92,4 @@ body {
 
 .element2 {grid-column: 18 / 19;}
 .element5, .element13 {grid-column: 13 /14;}
+.element58, .element90 {grid-column: 4 / 5;}
