--- a/equipment.css
+++ b/equipment.css
@@ -35,14 +35,19 @@ body{
     justify-content: left;
 }
 .img{
+    border: 10px;
+    margin-inline: 10px;
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
+    padding-left: 20px;
+    width: 150px;
+    height: 150px;
 }
 .all-contents{
     display: flex;
     flex-direction: column;
     width:auto;
-    /* justify-content: center; */
 }
 #topbar {
     background: linear-gradient(to right, rgb(108, 169, 255), rgb(72, 72, 255));
