--- a/faxstyle.css
+++ b/faxstyle.css
@@ -35,9 +35,7 @@ body{
     grid-template-rows: 300px 100px 100px;
     gap: 2px;
 }
-#setup > div{
-    background-color: aquamarine;
-}
+
 .ele1
 {
     background-color: aqua;
@@ -51,5 +49,13 @@ body{
 
 .ele2
 {
-    grid-row: 1/3;
+    background-color: red;
+    grid-row: 1/2;
 }
+.ele4{
+    background-color: aquamarine;
+}
+.ele5{
+    background-color: chocolate;
+}
+
