--- a/equipment.css
+++ b/equipment.css
@@ -9,7 +9,11 @@ body {
 ::after {
     box-sizing: border-box;
 }
-
+.ABCD{
+    display: flex;
+    flex-direction: row;
+    margin-left: 20px;
+}
 .equipment-main {
     display: flex;
 }
@@ -53,7 +57,6 @@ body {
 .all-contents {
     display: flex;
     flex-direction: column;
-    width: auto;
 }
 
 #topbar {
