--- a/equipment.css
+++ b/equipment.css
@@ -9,6 +9,12 @@ body {
 ::after {
     box-sizing: border-box;
 }
+.ABCD-1 {
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    flex-direction: row-reverse;
+}
 .ABCD{
     display: flex;
     flex-direction: row;
@@ -48,8 +54,8 @@ body {
     margin-inline: 10px;
     display: flex;
     flex-direction: column;
-    padding-top: 20px;
-    padding-left: 20px;
+    padding-top: 10px;
+    padding-left: 10px;
     width: 150px;
     height: 150px;
 }
