--- a/equipment.css
+++ b/equipment.css
@@ -8,6 +8,27 @@ body{
 ::after {
     box-sizing: border-box;
 }
+#topbar {
+    background: linear-gradient(to right, rgb(108, 169, 255), rgb(72, 72, 255));
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    height: 100px;
+    color: rgb(0, 0, 0);
+    font-family: 'Caveat';
+    font-size: 40px;
+}
+.topbar-btn>button {
+    color: white;
+    border: none;
+    background-color: inherit;
+}
+
+.logox {
+    color: rgb(255, 106, 72);
+}
+
+/* _____________________________________________________ */
 
 .equipment-main {
     display: flex;
@@ -48,24 +69,5 @@ body{
     display: flex;
     flex-direction: column;
     width:auto;
-}
-#topbar {
-    background: linear-gradient(to right, rgb(108, 169, 255), rgb(72, 72, 255));
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    height: 100px;
-    color: rgb(0, 0, 0);
-    font-family: 'Caveat';
-    font-size: 40px;
-}
-.topbar-btn>button {
-    color: white;
-    border: none;
-    background-color: inherit;
-}
-
-.logox {
-    color: rgb(255, 106, 72);
 }
 
