--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap');
 
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 *, ::before, ::after {
     box-sizing: border-box;
@@ -24,7 +24,7 @@ body {
     justify-content: space-between;
     height: 100px;
     color: rgb(255, 255, 255);
-    font-family: 'Caveat';
+    font-family: 'Share Tech Mono';
     font-size: 40px;
     letter-spacing: 2px;
 }
@@ -39,9 +39,7 @@ body {
     font-size: 15px;
     cursor: pointer;
 }
-.logox {
-    color: rgb(255, 106, 72);
-}
+
 /* Topbar CSS ends */
 
 .periodic-table-container {
@@ -60,12 +58,13 @@ body {
     width: 100%;
     height: 100%;
     padding: 3px;
-    background-color: antiquewhite;
+    background-color: #F9C22E;
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: 'Roboto';
-    cursor:cell;
+    cursor:pointer;
     transition: 0.05s;
     border: 1px solid black;
     border-radius: 0px;
