--- a/evolution.css
+++ b/evolution.css
@@ -37,8 +37,8 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom-left-radius:10%;
-    border-top-right-radius: 10%;
+    border-bottom-left-radius:30%;
+    border-top-right-radius: 30%;
     background-color: rgb(155, 165, 165);
     padding-bottom: 120px;
 }
@@ -80,6 +80,7 @@ h2{
     max-width: 1200px;
     margin: 0 auto;
     margin-top: 3vh;
+    height: 100%;
   }
   
   /* The actual timeline (the vertical ruler) */
@@ -100,6 +101,7 @@ h2{
     position: relative;
     background-color: inherit;
     width: 50%;
+    
   }
   
   /* The circles on the timeline */
@@ -125,20 +127,21 @@ h2{
   .right {
     left: 50%;
   }
-  
-  /* Add arrows to the left container (pointing right) */
-  .left::before {
+ /* Add arrows to the left container (pointing right) */
+.left::before {
+    padding: 0;
     content: " ";
     height: 0;
     position: absolute;
     top: 22px;
     width: 0;
     z-index: 1;
-    right: 30px;
+    right: 72px; /* Decrease this value to reduce the gap */
     border: medium solid white;
     border-width: 10px 0 10px 10px;
     border-color: transparent transparent transparent white;
-  }
+}
+
   
   /* Add arrows to the right container (pointing left) */
   .right::before {
@@ -161,6 +164,7 @@ h2{
   
   /* The actual content */
   .content {
+    
     height: 40vh;
     width: 60vh;
     background-color: white;
@@ -169,7 +173,9 @@ h2{
     justify-content: space-around;
     align-content: center;
     border-radius: 6px;
-    ;
+    position: relative;
+    transition: 0.7s;
+    
   }
   .content h2{
     font-size: 12vh;
@@ -178,11 +184,28 @@ h2{
   }
   .content p{
     font-family: 'Amatic SC', cursive;
-    margin: 20px;
-    font-size: 5vh;
-   
+    margin: 20px; 
   }
-  
+  .first-timeline,.second-timeline{
+    font-size: 5vh;
+  }
+  .second-timeline{
+    font-size: 4vh;
+  }
+  .third-timeline{
+    font-size: 2.5vh;
+  }
+  .fourth-timeline{
+    font-size: 3.5vh;
+  }
+  .fifth-timeiline{
+    font-size: 1vh;
+  }
+  .sixth-timeline{
+    font-size: 3vh;
+  }
+ 
+
   /* Media queries - Responsive timeline on screens less than 600px wide */
   @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
