--- a/equipment.css
+++ b/equipment.css
@@ -1,87 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Roboto&family=Share+Tech+Mono&display=swap');
 
 body {
     margin: 0;
 }
-
-*,
-::before,
-::after {
+*, ::before, ::after {
     box-sizing: border-box;
 }
-.ABCD-1 {
+/* __________---topbar---_________________________ */
+#topbar {
+    position: fixed;
+    width: 100%;
+    background-color: #000000;
+    padding: 30px;
     display: flex;
-    flex-direction: row;
-    margin: 20px;
-    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    height: 80px;
+    color: rgb(255, 255, 255);
+    font-family: 'Share Tech Mono';
+    font-size: 40px;
+    letter-spacing: 2px;
 }
-.ABCD{
-    display: flex;
-    flex-direction: row;
-    margin: 20px;
+.topbar-btn > button {
+    color: rgb(0, 0, 0);
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    height: 50px;
+    padding: 0 10px;
+    font-family: 'Roboto';
+    font-size: 15px;
+    cursor: pointer;
 }
+/* _____topbar end_______________________________ */
+
 .equipment-main {
     display: flex;
 }
 
-.BEAKER:hover {
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-    background-color: black;
-    color: white;
-    border: 1px solid black;
-}
-
-.BEAKER {
-    padding-bottom: 5px;
-}
-
 .TABLE-OF-CONTENTS {
-    margin-left: 5px;
-    margin-top: 2px;
+    position: fixed;
+    top: 95px;
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    padding-left: 5px;
-    padding-right: 10px;
-    padding-top: 5px;
-    width: max-content;
+    justify-content: center;
+    width: 310px;
+    height: 85vh;
+    margin-left: 10px;
+    border-radius: 30px;
     border: 2px solid black;
-    height: 100vh;
-    justify-content: left;
 }
-
-.img {
-    border: 10px;
-    margin-inline: 10px;
-    display: flex;
-    flex-direction: column;
-    padding-top: 10px;
-    padding-left: 10px;
-    width: 150px;
-    height: 150px;
+.TABLE-OF-CONTENTS > h3, .TABLE-OF-CONTENTS > h5 {
+    font-family: 'Roboto';
+    margin: 0;
+    padding: 0;
+    margin-left: 25px;
+    font-size: 20px;
 }
-
+.TABLE-OF-CONTENTS > h5 {
+    font-size: 16px;
+    margin-bottom: -10px;
+}
+.TABLE-OF-CONTENTS > ul > li > a {
+    text-decoration: none;
+    text-transform: capitalize;
+    font-family: 'roboto';
+}
 .all-contents {
     display: flex;
     flex-direction: column;
+    margin-left: 320px;
+    margin-top: 80px;
+    width: 100%;
 }
-
-#topbar {
-    background: linear-gradient(to right, rgb(108, 169, 255), rgb(72, 72, 255));
-    padding: 30px;
+.content{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    height: 100px;
-    color: rgb(0, 0, 0);
-    font-family: 'Caveat';
-    font-size: 40px;
+    padding: 20px 20px;
+    margin: 20px 20px 0 20px;
+    border-radius: 20px;
+    border: 2px solid black;
+}
+.content-right {
+    flex-direction: row-reverse;
+}
+.content > p {
+    font-family: 'Albert Sans';
+    width: 700px;
 }
 
-.topbar-btn>button {
-    color: white;
-    border: none;
-    background-color: inherit;
+.img {
+    width: 250px;
 }
 
-.logox {
-    color: rgb(255, 106, 72);
-}
+
