--- a/equipment.css
+++ b/equipment.css
@@ -71,8 +71,10 @@ body {
     display: flex;
     flex-direction: column;
     margin-left: 320px;
-    margin-top: 80px;
     width: 100%;
+}
+.Timepass{
+    height: 80px;
 }
 .content{
     display: flex;
