--- a/equipment.css
+++ b/equipment.css
@@ -82,7 +82,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px;
-    margin: 20px 20px 0 20px;
+    margin: 20px 20px 10px 20px;
     border-radius: 20px;
     border: 2px solid black;
 }
