--- a/equipment.css
+++ b/equipment.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Roboto&family=Share+Tech+Mono&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap');
 body {
     margin: 0;
+    background-color: rgb(0, 0, 0);
 }
 *, ::before, ::after {
     box-sizing: border-box;
@@ -9,6 +10,7 @@ body {
 /* __________---topbar---_________________________ */
 #topbar {
     position: fixed;
+    top: 0;
     width: 100%;
     background-color: #000000;
     padding: 30px;
@@ -21,27 +23,48 @@ body {
     font-size: 40px;
     letter-spacing: 2px;
 }
-.topbar-btn > button {
-    color: rgb(0, 0, 0);
+.topbar-btn {
+    display: flex;
+    align-items: center;
+}
+.topbar-a {
+    transition: 0.5s;
+    color: rgb(171, 171, 171);
     border: none;
-    border-radius: 10px;
-    background-color: rgb(255, 255, 255);
-    height: 50px;
-    padding: 0 10px;
+    padding: 0 25px 0 8px;
     font-family: 'Roboto';
-    font-size: 15px;
+    font-size: 16px;
     cursor: pointer;
+    text-decoration: none;
+    border-left: 2px solid white;
+}
+.topbar-a-1 {
+    color: white;
+    cursor: not-allowed;
+}
+.topbar-btn > a:hover {
+    color: #ffffff;
+}
+.logo {
+    margin: 0;
+}
+.logo > span {
+    color: #4583ff;
 }
 /* _____topbar end_______________________________ */
 
 .equipment-main {
     display: flex;
+    color: white;
 }
 
 .TABLE-OF-CONTENTS {
     position: fixed;
-    top: 95px;
-    background-color: rgb(255, 255, 255);
+    top: 50%;
+    transform: translateY(-50%);
+    margin-top: 40px;
+    background-color: rgb(0, 0, 0);
+    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,7 +72,7 @@ body {
     height: 85vh;
     margin-left: 10px;
     border-radius: 30px;
-    border: 2px solid black;
+    border: 2px solid rgb(255, 255, 255);
 }
 .TABLE-OF-CONTENTS > h3, .TABLE-OF-CONTENTS > h5 {
     font-family: 'Roboto';
@@ -66,14 +89,16 @@ body {
     text-decoration: none;
     text-transform: capitalize;
     font-family: 'roboto';
+    color: #4583ff;
 }
 .all-contents {
     display: flex;
     flex-direction: column;
     margin-left: 320px;
     width: 100%;
+    margin-bottom: 20px;
 }
-.Timepass{
+#Timepass{
     height: 80px;
 }
 .content{
@@ -82,9 +107,9 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px;
-    margin: 20px 20px 10px 20px;
+    margin: 20px 20px 0 20px;
     border-radius: 20px;
-    border: 2px solid black;
+    border: 2px solid rgb(255, 255, 255);
 }
 .content-right {
     flex-direction: row-reverse;
