--- a/index.css
+++ b/index.css
@@ -117,3 +117,19 @@ body {
 .element2 {grid-column: 18 / 19;}
 .element5, .element13 {grid-column: 13 /14;}
 .element58, .element90 {grid-column: 4 / 5;}
+
+.elements-wiki {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 99;
+}
+.elements-wiki > iframe {
+    width: 800px;
+    height: 500px;
+}
+.elements-wiki.active {
+    display: block;
+}
