--- a/evolution.css
+++ b/evolution.css
@@ -1,76 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 body{
-    background-color: #bbbbbb;
+    background-color: #201f1f;
     margin: 0;
 }
 *, ::before, ::after {
     box-sizing: border-box;
 }
 #topbar {
-    /* background: linear-gradient(to right, rgb(108, 169, 255), rgb(72, 72, 255)); */
-    background-color: #000000;
-    padding: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100px;
-    color: rgb(255, 255, 255);
-    font-family: 'Caveat';
-    font-size: 40px;
-    letter-spacing: 2px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #000000;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  color: rgb(255, 255, 255);
+  font-family: 'Share Tech Mono';
+  font-size: 40px;
+  letter-spacing: 2px;
+  z-index: 99;
 }
-.topbar-btn > button {
-    color: white;
-    border: none;
-    background-color: inherit;
+.topbar-btn {
+  display: flex;
+  align-items: center;
 }
-.logox {
-    color: rgb(255, 106, 72);
+.topbar-a {
+  transition: 0.5s;
+  color: rgb(171, 171, 171);
+  border: none;
+  padding: 0 25px 0 8px;
+  font-family: 'Roboto';
+  font-size: 16px;
+  cursor: pointer;
+  text-decoration: none;
+  border-left: 2px solid white;
+}
+.topbar-a-1 {
+  color: white;
+  cursor: not-allowed;
+}
+.topbar-btn > a:hover {
+  color: #ffffff;
+}
+.logo {
+  margin: 0;
+}
+.logo > span {
+  color: #4583ff;
 }
 
 
 
 
 .container-head{
-    margin: 2vh;
+    height: 90vh;
+    margin: 20px;
+    margin-top:100px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom-left-radius:30%;
-    border-top-right-radius: 30%;
-    background-color: rgb(155, 165, 165);
+    border-radius: 10%;
+    background-color: #000000;
     padding-bottom: 120px;
+    border: 0.5px solid #4583ff;
+    box-shadow: 0px 0px 12px #4583ff; 
 }
 h2{
+  margin: 0;
     text-align: center;
     font-family: 'Amatic SC', cursive;
-    font-size: 20vh;
+    font-size: 16vh;
+    color: #ffffff;
 }
 .image{
-    transform: rotate(180deg);
+    fill: #4583ff;
     transition: 0.3s;
 }
 .scroll_button {
+  margin-top: 40px;
     height: 110px;
     width: 110px;
-    background-color: #bbbbbb;
+    border: none;
+    border: 0.5px solid #4583ff;
+    box-shadow: 0px 0px 12px #4583ff;
     border-radius: 50%;
-    border: 3px solid black;
     border-radius: 50%;
     cursor: pointer;
     transition: 0.3s;
+    background-color:#000000;
+    
 }
 
 .scroll_button:hover{
-    background-color:#bbbbbb;
+    background-color:#000000;
     transition: 0.5s;
-    height: 130px;
-    width: 130px; 
+    transform: scale(1.09);
+    
+    box-shadow: 0px 0px 38px #4583ff; 
+    
 }
 
 .scroll_button:hover .image {
-    transform: rotate(180deg) translate(0px,-10px);
+    transform: rotate(180deg);
+    cursor: pointer;
+    
+}
+.content:hover{
+  transform: scale(1.04);
+  cursor: pointer;
+  box-shadow: 0px 0px 22px #4583ff
 }
 
   
@@ -81,6 +122,8 @@ h2{
     margin: 0 auto;
     margin-top: 3vh;
     height: 100%;
+    
+    
   }
   
   /* The actual timeline (the vertical ruler) */
@@ -88,11 +131,13 @@ h2{
     content: '';
     position: absolute;
     width: 6px;
-    background-color: white;
+    background-color: rgb(7, 7, 7);
     top: 0;
     bottom: 0;
     left: 50%;
     margin-left: -3px;
+    
+    box-shadow: 0px 0px 5px #4583ff; 
   }
   
   /* Container around content */
@@ -102,6 +147,7 @@ h2{
     background-color: inherit;
     width: 50%;
     
+    
   }
   
   /* The circles on the timeline */
@@ -110,9 +156,10 @@ h2{
     position: absolute;
     width: 25px;
     height: 25px;
-    right: -17px;
-    background-color: white;
-    border: 4px solid #FF9F55;
+    right: -12px;
+    background-color: rgb(0, 0, 0);
+    border: 4px solid #4583ff;
+    box-shadow: 0px 0px 22px #4583ff; 
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -136,10 +183,10 @@ h2{
     top: 22px;
     width: 0;
     z-index: 1;
-    right: 72px; /* Decrease this value to reduce the gap */
-    border: medium solid white;
+    right: 78px; /* Decrease this value to reduce the gap */
+    border: medium solid #040404;
     border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
+    border-color: transparent transparent transparent #000000;
 }
 
   
@@ -152,14 +199,14 @@ h2{
     width: 0;
     z-index: 1;
     left: 30px;
-    border: medium solid white;
+    border: medium solid rgb(0, 0, 0);
     border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
+    border-color: transparent rgb(0, 0, 0) transparent transparent;
   }
   
   /* Fix the circle for containers on the right side */
   .right::after {
-    left: -16px;
+    left: -13px;
   }
   
   /* The actual content */
@@ -167,7 +214,7 @@ h2{
     
     height: 40vh;
     width: 60vh;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -175,6 +222,8 @@ h2{
     border-radius: 6px;
     position: relative;
     transition: 0.7s;
+    border: 0.5px solid #4583ff;
+    box-shadow: 0px 0px 12px #4583ff;
     
   }
   .content h2{
@@ -185,6 +234,7 @@ h2{
   .content p{
     font-family: 'Amatic SC', cursive;
     margin: 20px; 
+    color: #ffffff;
   }
   .first-timeline,.second-timeline{
     font-size: 5vh;
@@ -207,7 +257,7 @@ h2{
  
 
   /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 1130px) {
   /* Place the timelime to the left */
     .timeline::after {
       left: 31px;
@@ -238,3 +288,20 @@ h2{
       left: 0%;
     }
   }
+  @media screen and (max-width: 490px) {
+  h2{
+    font-size: 7vh;
+  }
+  .container-head{
+    height: 40vh;
+    width: 100%;
+    margin: 4vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10%;
+    background-color: rgb(155, 165, 165);
+    padding-bottom: 120px;
+    box-shadow:10px 10px 20px #444343;
+  }}
+  
