--- a/equipment.css
+++ b/equipment.css
@@ -3,7 +3,7 @@
 
 body {
     margin: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(49, 49, 49);
 }
 
 *,
@@ -47,7 +47,7 @@ body {
 }
 .topbar-a-2 {
     color: white;
-    cursor: not-allowed;
+    cursor: default;
 }
 
 .topbar-btn>a:hover {
@@ -80,10 +80,11 @@ body {
     flex-direction: column;
     justify-content: center;
     width: 310px;
-    height: 65vh;
+    height: 470px;
     margin-left: 10px;
     border-radius: 30px;
-    border: 2px solid rgb(255, 255, 255);
+    padding-top: 10px;
+    /* border: 2px solid rgb(255, 255, 255); */
 }
 
 .TABLE-OF-CONTENTS>h3,
@@ -127,7 +128,7 @@ body {
     padding: 20px 20px;
     margin: 20px 20px 0 20px;
     border-radius: 20px;
-    border: 2px solid rgb(255, 255, 255);
+    /* border: 2px solid rgb(255, 255, 255); */
 }
 
 .content-right {
