--- a/evolution.css
+++ b/evolution.css
@@ -40,7 +40,7 @@ body{
 }
 .topbar-a-3 {
   color: white;
-  
+  cursor: default;
 }
 .topbar-btn > a:hover {
   color: #ffffff;
@@ -56,7 +56,7 @@ body{
 
 
 .container-head{
-    height: 90vh;
+    height: 85vh;
     margin: 20px;
     margin-top:100px;
     display: flex;
