--- a/equipment.css
+++ b/equipment.css
@@ -3,7 +3,7 @@
 
 body {
     margin: 0;
-    background-color: rgb(49, 49, 49);
+    background-color: #313131;
 }
 
 *,
@@ -74,7 +74,7 @@ body {
     top: 50%;
     transform: translateY(-50%);
     margin-top: 40px;
-    background-color: rgb(0, 0, 0);
+    background-color: #313131;
     color: white;
     display: flex;
     flex-direction: column;
@@ -105,7 +105,7 @@ body {
     text-decoration: none;
     text-transform: capitalize;
     font-family: 'roboto';
-    color: #4583ff;
+    color: #d5e7ff;
 }
 
 .all-contents {
@@ -114,6 +114,7 @@ body {
     margin-left: 320px;
     width: 100%;
     margin-bottom: 20px;
+    margin-top: 30px;
 }
 
 #Timepass {
@@ -126,8 +127,8 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px;
-    margin: 20px 20px 0 20px;
-    border-radius: 20px;
+    /* margin: 20px 20px 0 20px; */
+    border-bottom: 1px solid gray;
     /* border: 2px solid rgb(255, 255, 255); */
 }
 
@@ -142,4 +143,5 @@ body {
 
 .img>img {
     width: 250px;
+    border-radius: 20px;
 }
