--- a/faxstyle.css
+++ b/faxstyle.css
@@ -78,13 +78,6 @@ body{
     width: 800px;
     z-index: 1;
 }
-
-#left
-{
-    background-color: blue;
-    
-    
-}
 #right
 {
     
@@ -102,10 +95,74 @@ body{
 .ele >img{
     width: 450px;
     max-height: 600 px;
-    border: 2px solid #4583ff;;
+    border: 2px solid #4583ff;
+    
+    border: 0.5px solid #4583ff;
+    box-shadow: 0px 0px 12px #4583ff;
 }
 #right>a>img
 {
     border-radius: 50%; 
     width: 40px;
+}
+
+
+
+
+  
+
+  .image-container {
+    position: relative;
+     /* Adjust the width as needed */
+  }
+
+  
+  
+
+  .action-bar {
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(171, 69, 69, 0.8);
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+  }
+
+  .action-bar>button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 20px;
+  }
+
+  /* Add hover effects if desired */
+  .action-button:hover {
+    opacity: 0.7;
+  }
+  
+  #left
+  {
+    background-color: rgb(165, 165, 194);
+    max-width:400px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 40px;
+    gap:80px;
+}
+#right
+{
+background-color:red;
+}
+.fact
+{
+    font-family: 'roboto';
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    background-color: red;
+    width: 400px;
+    
+
 }
