--- a/landing.css
+++ b/landing.css
@@ -53,7 +53,11 @@ body {
     margin: 0;
     cursor: pointer;
 }
-.logo > span {
+.logo > a {
+    text-decoration: none;
+    color: white;
+}
+.logo > a > span {
     color: #00ffaa;
 }
 
