Chepp oru mandan aan

--- a/faxstyle.css
+++ b/faxstyle.css
@@ -39,7 +39,6 @@ body{
     font-size: 16px;
     cursor: pointer;
     text-decoration: none;
-    border-left: 2px solid #4583ff;;
 }
 .topbar-a-1 {
     color: white;
@@ -95,7 +94,6 @@ body{
 .ele >img{
     width: 450px;
     max-height: 600 px;
-    border: 2px solid #4583ff;
     
     border: 0.5px solid #4583ff;
     box-shadow: 0px 0px 12px #4583ff;
@@ -123,7 +121,7 @@ body{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(171, 69, 69, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     justify-content: space-around;
     padding: 10px;
@@ -144,25 +142,34 @@ body{
   
   #left
   {
-    background-color: rgb(165, 165, 194);
+    padding-left: 10px;
+    background-color: rgb(6, 6, 6);
     max-width:400px;
     display: flex;
     flex-direction: column;
     padding-top: 40px;
     gap:80px;
 }
-#right
-{
-background-color:red;
-}
+
 .fact
 {
+    transition: 0.3s;
+    padding: 20px;    
     font-family: 'roboto';
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
     display: flex;
-    background-color: red;
-    width: 400px;
-    
+    align-items: center;
+    background-color: rgb(0, 0, 0);
+    border-radius: 10%;
+    border: 0.5px solid #4583ff;
+    box-shadow: 0px 0px 12px #119d44;
+    cursor: pointer;
 
 }
+
+
+.fact:hover{
+    
+    box-shadow: 0px 0px 22px #4583ff
+  }
