--- a/evolution.css
+++ b/evolution.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Roboto&family=Share+Tech+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 body{
-    background-color: #131313;
+    background: linear-gradient(to right,#062f16,#000000 90%);
     margin: 0;
 }
 *, ::before, ::after {
@@ -53,53 +53,69 @@ body{
 }
 
 
-
+.image{
+  height: 120vh;
+  width: 60vw;
+}
+.image-div{
+  width: fit-content;
+  height: 400px;
+}
 
 .container-head{
-    height: 85vh;
-    margin: 20px;
-    margin-top:100px;
+    height: 70vh;
+    margin-top:60px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    border-radius: 10%;
-    background-color: #000000;
+    background-color: #1DB954;
+    background: linear-gradient(to right,#1DB954,#011a0a 90%);
     padding-bottom: 120px;
-    border: 0.5px solid #4583ff;
-    box-shadow: 0px 0px 12px #4583ff; 
+    overflow: hidden;
+    border-bottom-left-radius: 5%;
+   border-bottom-right-radius:5% ;
+}
+.head-content{
+  display: flex;
+  justify-content: space-between;
 }
 h2{
-  margin: 0;
-    text-align: center;
-    font-family: 'Amatic SC', cursive;
-    font-size: 16vh;
-    color: #ffffff;
+    margin-left: 11px;
+    font-family:'albert sans';
+    font-size: 14vh;
+    color: #000000;
+    margin-bottom: 0;
+  
 }
-.image{
-    fill: #4583ff;
-    transition: 0.3s;
+p{
+  margin-top: -150px;
+  margin-left: 12px;
+  font-family:'albert sans';
+  font-size: 3vh;
 }
+
 .scroll_button {
-  margin-top: 40px;
-    height: 110px;
-    width: 110px;
+    margin-left: 240px;
+    margin-top: 40px;
+    font-size: larger;
+    height:40px;
+    width:fit-content;
+    font-family:'albert sans';
+    word-spacing: 12px;
     border: none;
-    border: 0.5px solid #4583ff;
-    box-shadow: 0px 0px 12px #4583ff;
-    border-radius: 50%;
-    border-radius: 50%;
     cursor: pointer;
+    color: #1DB954;
+    border-radius:12% ;
     transition: 0.3s;
     background-color:#000000;
+    transform: scale(1.50);
     
 }
 
 .scroll_button:hover{
-    background-color:#000000;
     transition: 0.5s;
-    transform: scale(1.09);
-    
-    box-shadow: 0px 0px 38px #4583ff; 
+    transform: scale(1.45);
+    background-color: white;
+    color: #000000;
     
 }
 
@@ -111,7 +127,6 @@ h2{
 .content:hover{
   transform: scale(1.04);
   cursor: pointer;
-  box-shadow: 0px 0px 22px #4583ff
 }
 
   
@@ -137,8 +152,7 @@ h2{
     bottom: 0;
     left: 50%;
     margin-left: -3px;
-    
-    box-shadow: 0px 0px 5px #4583ff; 
+    border: 1px solid #1DB954;
   }
   
   /* Container around content */
@@ -158,9 +172,8 @@ h2{
     width: 25px;
     height: 25px;
     right: -12px;
-    background-color: rgb(0, 0, 0);
-    border: 4px solid #4583ff;
-    box-shadow: 0px 0px 22px #4583ff; 
+    background-color: #000000;
+    border: 4px solid #1DB954; 
     top: 15px;
     border-radius: 50%;
     z-index: 1;
@@ -223,17 +236,27 @@ h2{
     border-radius: 6px;
     position: relative;
     transition: 0.7s;
-    border: 0.5px solid #4583ff;
-    box-shadow: 0px 0px 12px #4583ff;
+    border: 0.5px solid #1DB954;
+
     
   }
-  .content h2{
-    font-size: 12vh;
+  .h2-content{
+    border-radius: 50%;
+    background-color: #1DB954;
+    height: 120px;
+    width: 120px;
+    font-size: 9vw;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#000000;
     margin: 0;
-    padding: 0;
   }
+  
+    
   .content p{
-    font-family: 'Amatic SC', cursive;
+    font-family:'albert sans';
     margin: 20px; 
     color: #ffffff;
   }
