--- a/evolution.css
+++ b/evolution.css
@@ -36,7 +36,6 @@ body{
   font-size: 16px;
   cursor: pointer;
   text-decoration: none;
-  border-left: 2px solid white;
 }
 .topbar-a-3 {
   color: white;
@@ -54,48 +53,40 @@ body{
 
 
 .image{
-  height: 120vh;
-  width: 60vw;
-}
-.image-div{
-  width: fit-content;
-  height: 400px;
+  width: 100%;
 }
 
 .container-head{
-    height: 70vh;
-    margin-top:60px;
+    height: 550px;
+    margin-top: 80px;
     display: flex;
-    flex-direction: column;
-    background-color: #1DB954;
-    background: linear-gradient(to right,#1DB954,#011a0a 90%);
-    padding-bottom: 120px;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(to right,#1DB954 20%,#011a0a);
+    padding-left: 30px;
     overflow: hidden;
-    border-bottom-left-radius: 5%;
-   border-bottom-right-radius:5% ;
+    border-bottom-left-radius: 10%;
 }
 .head-content{
+  height: 65%;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 h2{
-    margin-left: 11px;
     font-family:'albert sans';
-    font-size: 14vh;
+    font-size: 100px;
     color: #000000;
-    margin-bottom: 0;
-  
+    margin: 0;
+    margin-left: -6px;
 }
 p{
-  margin-top: -150px;
-  margin-left: 12px;
   font-family:'albert sans';
-  font-size: 3vh;
+  font-size: 20px;
 }
 
 .scroll_button {
-    margin-left: 240px;
-    margin-top: 40px;
     font-size: larger;
     height:40px;
     width:fit-content;
@@ -108,7 +99,6 @@ p{
     transition: 0.3s;
     background-color:#000000;
     transform: scale(1.50);
-    
 }
 
 .scroll_button:hover{
