--- a/evolution/evolution.css
+++ b/evolution/evolution.css
@@ -194,7 +194,7 @@ p {
   /* The actual content */
   .content {  
     height: 40vh;
-    width: 74vh;
+    width: 35vw;
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
