--- a/landing.css
+++ b/landing.css
@@ -18,13 +18,13 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #4583ff;
+    background-color: #000000;
     padding: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 80px;
-    color: #ffffff;
+    color: #000000;
     font-family: 'Share Tech Mono';
     font-size: 40px;
     letter-spacing: 2px;
@@ -36,7 +36,7 @@ body {
 }
 .topbar-a {
     transition: 0.3s;
-    color: #EBD4CB;
+    color: #c4c4c4;
     border: none;
     padding: 0 25px 0 8px;
     font-family: 'Roboto';
@@ -55,13 +55,18 @@ body {
 }
 .logo > a {
     text-decoration: none;
-    color: #1B3022;
+    color: #ffffff;
 }
 /* .logo > a > span {
     color: #00ffaa;
 } */
 
 /* Topbar CSS ends */
+.landing {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .landing-1 {
     display: flex;
@@ -87,23 +92,40 @@ body {
     height: 90%;   
 }
 
-.landing-2-content {
+.landing-2 {
     margin-top: 80px;
-    height: 300vh;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.landing-2 img {
+    position: absolute;
+    bottom: 200px;
+}
+
+.landing-2-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: fit-content; 
     color: #ffffff;
     font-family: 'roboto';
-    padding: 30px;
+    padding: 20px;
+    height: 400px;
+    width: 600px;
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(20px);
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .landing-2-content > button {
     height: 50px;
     width: 200px;
     font-size: 20px;
-    background-color: yellow;
+    background-color: rgb(255, 228, 53);
     border: 2px solid black;
     border-radius: 200px;
     cursor: pointer;
