--- a/equipment/equipment.css
+++ b/equipment/equipment.css
@@ -1,6 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Roboto&family=Share+Tech+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap');
 
+@media (max-width: 768px) {
+    .TABLE-OF-CONTENTS {
+        position: static;
+        margin: 0 auto;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        padding: 20px 0;
+        background-color: #313131;
+        border-bottom: 1px solid white;
+        padding-bottom: 10px;
+    }
+    .TABLE-OF-CONTENTS>ul{ 
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .TABLE-OF-CONTENTS>h3,
+    .TABLE-OF-CONTENTS>h5,
+    .TABLE-OF-CONTENTS>ul>li {
+        margin: 0;
+        padding-top: 10px;
+        padding-right: 10px;
+        font-size: 16px;
+        color: white;
+    }
+}
+
 body {
     margin: 0;
     background-color: #313131;
@@ -50,7 +81,7 @@ body {
 }
 
 .topbar-btn>a:hover {
-    color: #ffa7a7;
+    color: #fbff03;
 }
 
 .logo {
@@ -88,7 +119,6 @@ body {
     margin-left: 10px;
     border-radius: 30px;
     padding-top: 10px;
-    /* border: 2px solid rgb(255, 255, 255); */
 }
 
 .TABLE-OF-CONTENTS>h3,
@@ -131,9 +161,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px;
-    /* margin: 20px 20px 0 20px; */
     border-bottom: 1px solid gray;
-    /* border: 2px solid rgb(255, 255, 255); */
 }
 
 .content-right {
