--- a/feedback.css
+++ b/feedback.css
@@ -53,7 +53,7 @@ body{
 }
 
 
-.main{
+.main1{
   margin: 0;
   margin-top: 80px;
   display: flex;
@@ -75,7 +75,7 @@ body{
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 5vh;
-    height: 70vh;
+    height: 82vh;
     width: 50vw;
     border: 1px solid black;
     border-radius: 10%;
@@ -83,7 +83,8 @@ body{
     backdrop-filter: blur(5px);
 }
 .img{
-  height: 70vh;
+  height: 40vw;
+  width: 50vw;
   margin-left: -70px;
   margin-top: -50px;
 }
@@ -96,6 +97,7 @@ body{
 .forms input{
     border-radius: 1%;
     border: none;
+    width: 10vw;
     border-bottom: 1px solid black;
 }
 .forms h2{
@@ -111,8 +113,85 @@ h3{
 }
 .emoji{
   display: flex;
+  flex-shrink: inherit;
   flex-direction: row;
+  margin-top: -15px;
+  margin: 3vw;
+  margin-bottom: 0;
+
+  
 }
-.emoji img{
-  height: 1vw;
+.emoji svg{
+  width: 4vw;
+  height: 4vh;
+  margin-left: 80px;
+  transition: 0.3s;
+  
+}
+
+  
+svg:hover{
+  fill: #ffffff;
+  cursor: pointer;
+  transform: scale(1.15);
+  
+}
+.submit{
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.5vw;
+  color: #ffffff;
+  background-color: #000000;
+  border: none;
+  border-radius: 3vw;
+  height: 3vw;
+  width: 7vw;
+  margin-left: 21vw;
+  margin-top: 2vw;
+  transition: 0.3s;
+}
+.submit:hover{
+  background-color: #ffffff;
+  color: #000000;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.popup{
+  font-family: 'Nunito', sans-serif;
+  width: 20vw;
+  padding-bottom: 2vw;
+  top: 50%;
+  left: 50%;
+  position: fixed;
+  background-color: #ffffff;
+  transform: translate(-50%, -50%);
+  z-index: 1px;
+  text-align: center;
+  border-radius: 2vw;
+  visibility: hidden;
+  transition: 0.7s;
+  border: 1px solid black;
+}
+.done{
+  border: none;
+  background-color: black;
+  color: aliceblue;
+  border-radius: 2vw;
+}
+.done:hover{
+  cursor: pointer;
+  background-color:#ffffff;
+  color: #000;
+}
+.open-popup{
+  visibility: visible;
+}
+.open-main1{
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+}
+@media screen and (max-width: 400px) {
+  .forms-header{
+    height: 100%;
+  }
+  
 }
