--- a/landing.css
+++ b/landing.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Roboto&family=Share+Tech+Mono&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
 body {
     margin: 0;
     padding: 0;
@@ -57,11 +60,9 @@ body {
     text-decoration: none;
     color: #ffffff;
 }
-/* .logo > a > span {
-    color: #00ffaa;
-} */
-
 /* Topbar CSS ends */
+
+
 .landing {
     display: flex;
     flex-direction: column;
